Fix the footer links on mobiles

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -140,7 +140,7 @@ img.alignright {
 
 .links {
   list-style: none;
-  padding: 10px 0px 10px 20px;
+  padding: 10px 0 10px 0;
 }
 
 .links li {
@@ -221,6 +221,10 @@ img.alignright {
   }
 
   .links {
-    font-size: 0.9em;
+    font-size: 90%;
+
+    li {
+      padding-left: 5px;
+    }
   }
 }
